<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#092747"
    >

  <TextView
      android:id="@+id/introduce"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:text="@string/BMI"
      android:textColor="@color/colorWhite"
      android:textSize="18sp"/>
  <LinearLayout
      android:layout_below="@+id/introduce"
      android:id="@+id/inputheight"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:weightSum="2"
      android:layout_marginTop="20dp"
      android:orientation="horizontal">
      <TextView
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:text="@string/height"
          android:textColor="@color/colorWhite"
          android:textStyle="italic"/>
      <EditText
          android:id="@+id/editheight"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext"
          android:layout_weight="1"
          android:layout_marginLeft="5dp"
          android:textColor="@color/colorWhite"
          android:textColorHint="#FFFFFF"
          android:hint="170"
          />

  </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/inputheight"
        android:id="@+id/inputweight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/weight"
            android:textColor="@color/colorWhite"
            android:textStyle="italic"/>
        <EditText
            android:id="@+id/edit_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="#FFFFFF"
            android:hint="65"
            />
    </LinearLayout>
    <Button
        android:layout_below="@+id/inputweight"
        android:id="@+id/tinhbmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_button"
        android:text="@string/calculateBMI"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_below="@+id/tinhbmi"
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:layout_below="@+id/result"
        android:id="@+id/chisobmitinhduoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/index"
        android:ellipsize="end"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:layout_below="@+id/chisobmitinhduoc"
        android:id="@+id/tinhtrangcothe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BodyStatus"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"
       />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bắt đầu 30 ngày thử thách"
        android:textColor="#25b3f5"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:src="@drawable/start"
        />
    </LinearLayout>
</RelativeLayout>